# hexlet-django-blog

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
hexlet_django_blog/: asgi.py  settings.py  urls.py  views.py  wsgi.py
hexlet_django_blog/article/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/: article.html  comment.html  create.html  index_art.html  show.html  update.html
hexlet_django_blog/templates/: about.html  base.html  index.html
