[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["Iaroslav <GunGalla@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet-django-blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
